force-app/main/default/objects/Opportunity_Score__c/Opportunity_Score__c.object-meta.xml
<CustomObject>
    <label>Opportunity Score</label>
    <nameField>
        <displayFormat>OSC-{00000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>