force-app/main/default/objects/Opportunity_Score__c/fields/Competitive_Risk__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Risk__c</fullName>
    <description>Manually assessed competitive pressure (0 = no competition, 100 = highly contested). Reduces composite score.</description>
    <label>Competitive Risk</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>