force-app/main/default/objects/Opportunity_Score__c/fields/Composite_Score__c.field-meta.xml
<CustomField>
    <fullName>Composite_Score__c</fullName>
    <label>Composite Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>