force-app/main/default/objects/Opportunity_Score__c/fields/Deal_Size_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Score__c</fullName>
    <label>Deal Size Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>